--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         </section>
         <!-- *-+*-+*-+*-+*-+*-+*-+*-+*-+ Footer Section *-+*-+*-+*-+*-+*-+*-+*-+ -->
         <footer id="footer">
-            <p>All Rights Reserved. &copy; SRB</p>
+            <p>All Rights Reserved. &copy; SRB <br><a href="https://www.google.com/search?q=resort+sunsrise+b%C3%A9ja%C3%AFa&oq=resort+sunsrise+b%C3%A9&aqs=chrome.3.69i57j33i10i160l3.12050j0j7&sourceid=chrome&ie=UTF-8" target="_blank">Adresse : RX6V+FQV, BÃ©jaÃ¯a</a></p>
             <div class="footer__social">
                 <a href="https://www.facebook.com/profile.php?id=100008174688456" class="footer__social--link" target="_blank">
                     <i class="fab fa-facebook-f"></i>
