--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <i class="fab fa-facebook-f"></i>
                 </a>
                 
-                <a href="https://www.linkedin.com/in/amine-samar-3420b823b/" class="footer__social--link" target="_blank">
+                <a href="https://www.linkedin.com/in/samdev445/" class="footer__social--link" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://www.instagram.com/the_sunrise_resort_bejaia/" class="footer__social--link" target="_blank">
